added some extra text

--- a/views/createcard.ejs
+++ b/views/createcard.ejs
@@ -17,7 +17,8 @@
         <div class="form-group">
           <input type="text" name="fullName" class="form-control" placeholder="Full name" formmethod="post"><br>
           <input type="text" name="aboutMe" class="form-control" placeholder="About Me" formmethod="post"><br>
-
+          
+          <label> Technologies you Know</label><br>
           <input type="checkbox" name="knownHTML" value="HTML">
           <label for="knownHTML">HTML</label><br>
           <input type="checkbox" name="knownCSS" value="CSS">
